@@ -38,6 +38,10 @@
 <p>2018-04-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (DecodeImage): Assure that scanline is initialized
+to avoid use of uninitialized data.  Fixes oss-fuzz 8063
+&quot;graphicsmagick/coder_WPG_fuzzer: Use-of-uninitialized-value in
+ReadPICTImage&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/dpx.c (ReadDPXImage): Assure that NULL pixels is not
 used.  Fixes oss-fuzz 8078 &quot;graphicsmagick/coder_DPX_fuzzer:
 Null-dereference WRITE in ReadDPXImage&quot;. (Credit to OSS-Fuzz)</li>
